src/index.css
@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;600;700;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap');

:root {
  font-family: system-ui;
  line-height: 1.5;
  font-weight: 400;

  color: white;
  background-color: #ffffff;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 0;
  font-family: "Rubik";
  padding-bottom: 1rem;
}
h2 {
  font-size: 1.8em;
  font-family: 'Rubik';
  font-weight:400;
  padding-bottom: .5rem;
  line-height: 0;
}
p {
  font-family: 'Rubik';
  font-size: 1.2em;
}

/*change color of text */
::-moz-selection {
  color: white;
  background: #2c38ba;
}

::selection {
  color: white;
  background: #245abe;
}

